--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,15 +10,17 @@ License: Apache License (>= 2)
 Encoding: UTF-8
 LazyData: true
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    omock,
+    duckdb,
+    DBI
 Config/testthat/edition: 3
 RoxygenNote: 7.3.1
 Imports: 
+    CDMConnector,
     CohortCharacteristics,
     cli,
     dplyr,
-    dplyr,
     omopgenerics,
     PatientProfiles,
-    magrittr,
-    omock
+    magrittr
