--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,5 @@ export(phenotypeCohort)
 export(reportPhenotype)
 export(shinyPhenotype)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
+importFrom(rlang,.env)
