--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Suggests:
     DBI,
     gt,
     omock,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    knitr
 Config/testthat/edition: 3
 RoxygenNote: 7.3.1
 Imports: 
@@ -31,3 +32,4 @@ Imports:
     rlang,
     visOmopResults
 URL: https://oxford-pharmacoepi.github.io/phenotypeR/
+VignetteBuilder: knitr
