--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,11 +15,13 @@ Suggests:
     gt,
     omock,
     testthat (>= 3.0.0),
-    knitr
+    knitr,
+    RPostgres
 Config/testthat/edition: 3
 RoxygenNote: 7.3.1
 Imports: 
     CDMConnector,
+    CodelistGenerator,
     CohortCharacteristics,
     CohortConstructor,
     cli,
