--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,7 @@ Suggests:
     omock,
     testthat (>= 3.0.0),
     knitr,
-    RPostgres,
-    shinytest2
+    RPostgres
 Config/testthat/edition: 3
 RoxygenNote: 7.3.1
 Imports: 
