--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,10 +18,10 @@ Suggests:
     knitr,
     RPostgres
 Config/testthat/edition: 3
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Imports: 
     CDMConnector,
-    CodelistGenerator,
+    CodelistGenerator (>= 3.1.0),
     CohortCharacteristics,
     CohortConstructor,
     cli,
