--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,18 @@
 Package: phenotypeR
 Type: Package
-Title: Phenotype a set of cohorts in data mapped to a the OMOP common data model
+Title: Assess Study Cohorts Using a Common Data Model
 Version: 0.0.900
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Authors@R: c(
+    person("Edward", "Burn", , "edward.burn@ndorms.ox.ac.uk", 
+    role = c("aut", "cre"), comment = c(ORCID = "0000-0002-9286-1128")),
+    person("Marti", "Catala", , "marti.catalasabate@ndorms.ox.ac.uk", 
+    role = c("aut"), comment = c(ORCID = "0000-0003-3308-9905")),
+    person("Xihang", "Chen", , "xihang.chen@ndorms.ox.ac.uk", 
+    role = c("aut"), comment = c(ORCID = "0009-0001-8112-8959")),    
+    person("Albert", "Prats-Uribe", , "albert.prats-uribe@ndorms.ox.ac.uk", 
+    role = "aut", comment = c(ORCID = "0000-0003-1202-9153")))
+Description: Phenotype study cohorts in data mapped to the 
+    Observational Medical Outcomes Partnership Common Data Model.
 License: Apache License (>= 2)
 Encoding: UTF-8
 LazyData: true
