--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(codelistDiagnostics)
 export(cohortDiagnostics)
 export(cohortToPopulationDiagnostics)
+export(databaseDiagnostics)
 export(reportDiagnostics)
 export(shinyDiagnostics)
 importFrom(magrittr,"%>%")
