--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ Suggests:
     gt,
     omock,
     OmopSketch,
+    omopViewer,
     testthat (>= 3.0.0),
     knitr,
     RPostgres,
@@ -51,4 +52,4 @@ URL: https://oxford-pharmacoepi.github.io/phenotypeR/
 VignetteBuilder: knitr
 Remotes: 
     darwin-eu-dev/CohortCharacteristics
-
+    oxford-pharmacoepi/omopViewer
