--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,5 +51,5 @@ Imports:
 URL: https://oxford-pharmacoepi.github.io/phenotypeR/
 VignetteBuilder: knitr
 Remotes: 
-    darwin-eu-dev/CohortCharacteristics
+    darwin-eu-dev/CohortCharacteristics,
     oxford-pharmacoepi/omopViewer
