--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(cohortToPopulationDiagnostics)
 export(databaseDiagnostics)
 export(exportSummarisedResult)
 export(importSummarisedResult)
-export(phenotype)
+export(phenotypeDiagnostics)
 export(reportDiagnostics)
 export(settings)
 export(shinyDiagnostics)
