--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,10 @@ export("%>%")
 export(bind)
 export(codelistDiagnostics)
 export(cohortDiagnostics)
-export(cohortToPopulationDiagnostics)
 export(databaseDiagnostics)
 export(exportSummarisedResult)
 export(importSummarisedResult)
+export(matchedDiagnostics)
 export(phenotypeDiagnostics)
 export(settings)
 export(shinyDiagnostics)
