placeholder for pop diagnostics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(exportSummarisedResult)
 export(importSummarisedResult)
 export(matchedDiagnostics)
 export(phenotypeDiagnostics)
+export(populationDiagnostics)
 export(settings)
 export(shinyDiagnostics)
 export(summariseAchillesCodeUse)
